--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -43,4 +43,9 @@ jobs:
     - name: Terraform Plan
       id: plan
       run: terraform plan -no-color
-      continue-on-error: true
+      continue-on-error: false
+
+    - name: Terraform Apply
+      id: apply
+      run: terraform apply
+      continue-on-error: false
